data/derived/comb/progs/unify/prog7742.ml.out
Characters 57-58:
  fixpoint(f b, b)
                ^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'a
